Fix on mobile, carousel items remain blurred in full screen

--- a/frontend/sass/components/_carousel.scss
+++ b/frontend/sass/components/_carousel.scss
@@ -13,6 +13,10 @@
 		cursor: auto;
 		filter: brightness(1) blur(0);
 	}
+
+	@include respond(mobile) {
+		filter: brightness(1) blur(0px);
+	}
 }
 
 .carousel {
